# multyscale

./: .codespell.ignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.py  demo_dogbank.py  demo_filterbank.py  demo_flodog.py  demo_lodog.py  demo_odog.py  filterbank.py  filters.py  models.py  noxfile.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_testing.txt  setup.py  utils.py
.github/workflows/: lint.yml  test.yml  version.yml
demo/: demo_dogbank.py  demo_filterbank.py  demo_filters.py  demo_flodog.py  demo_flodog_params.ipynb  demo_fodog.py  demo_lodog.py  demo_odog.py  filters.ipynb  filters.py  howto_run_(F)(L)ODOG.py  re3.ipynb  replication_flodog_params.py  replication_lodog_param.py  run_flodog.ipynb  validation_lodog_param.py
docs/: _config.yml  _toc.yml  conf.py  index.md  index.rst  install.rst  multyscale.normalization.rst  multyscale.rst
docs/contributing/: contribute.md  dev_environ.md  docs.md  get_in_touch.md
docs/cookbook/: cookbook.rst  howto_run_flodog.nblink
docs/filtering/: filterbanks.py
docs/getting_started/: getting_started.md  installation.md
docs/howtos/: howtos.md
docs/normalization/: explore_FLODOG_parameters.py  explore_LODOG_parameter.py  normalization_FLODOG.py  normalization_LODOG.py  normalization_ODOG.py  normalization_generalized.py  topic_guides.md
docs/quickstart/: installation.md  quickstart.md  run_(F)(L)ODOG.py
docs/reference/: api.md  multyscale.filterbank.rst  multyscale.filters.rst  multyscale.models.rst  multyscale.rst  multyscale.utils.rst
docs/topic_guides/: history.md  overview.md  topic_guides.md
docs/topics/: brightness_modeling.rst  topics.rst
docs/tutorials/: demo_filters.nblink  tutorials.rst
multyscale/: __init__.py  filterbank.py  filterbanks.py  filters.py  models.py  normalization.py  utils.py
test/: MATLAB_RHS2007_(F)(L)ODOG.mat  MATLAB_comparison.py  RHS_filters.py  RHS_implementation.py  conftest.py  test_FLODOG.py  test_LODOG.py  test_ODOG.py  test_RHS_filters.py  test_RHS_implementation.py  test_RHS_matlab.py  test_apply.py  test_filterbanks.py  test_filters.py  test_models.py  test_normalization.py
