[project]
name = "multyscale"
description = "Composable multiscale spatial filtering models"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
keywords = [
    "visual perception",
    "spatial filtering",
    "multiscale",
    "computational modeling",
]

license = { file = "LICENSE" }
maintainers = [{ name = "Joris Vincent", email = "joris.vincent@tu-berlin.de" }]
version = "0.2.0"

requires-python = ">=3.8"
dependencies = ["numpy", "scipy", "matplotlib", "Pillow"]

[project.optional-dependencies]
dev = ["pytest", "black", "pyupgrade", "flake8"]
docs = [
    "Sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "sphinx-tabs",
    "sphinxcontrib-applehelp",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-devhelp",
    "sphinxcontrib-htmlhelp",
    "sphinxcontrib-jsmath",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-qthelp",
    "sphinxcontrib-serializinghtml",
    "ipykernel",
    "ipython",
    "ipython-genutils",
    "ipywidgets",
    "jupyter-client",
    "jupyter-core",
    "jupyterlab-pygments",
    "jupyterlab-widgets",
    "nbclient",
    "nbconvert",
    "nbformat",
    "nbsphinx",
    "nbsphinx-link",
    "notebook",
    "rstcheck",
    "widgetsnbextension",
]

[build-system]
requires = ["setuptools >= 40.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "multyscale*",
] # package names should match these glob patterns (["*"] by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)


[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 99

[tool.codespell]
skip = "./docs/_build/*,*.ipynb"
#exclude-file = ".codespell.ignore"
